--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
                         Address: <span>Sisoth, Mohindergarh <br> Haryana -123029</span>
                     </address>
                     <p id="loginInfo"><span id="loginUsr"> </span>
-                        <i onclick="logout()" title="Logout" class="fa-solid fa-circle-user"></i>
+                        <i id="logOutBtn" title="Logout" class="fa-solid fa-circle-user"></i>
                     </p>
                 </div>
             </div>
