--- a/home.html
+++ b/home.html
@@ -1212,6 +1212,7 @@
                                     <th style="width: 12%;">Place_Of_Sewa</th>
                                     <th style="width: 12%;">From__Date</th>
                                     <th style="width: 12%;">To__Date__</th>
+                                    <th style="width: 10%;">Days</th>
                                     <th style="width: 20%;">Department</th>
                                     <th style="width: 12%;">Jathedar_Name</th>
                                     <th style="width: 3%;">Download</th>
